--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ crate-type = ["cdylib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 zed_extension_api = "0.7.0"
+semver = "1"
