--- a/extension.toml
+++ b/extension.toml
@@ -6,6 +6,10 @@ schema_version = 1
 authors = ["Nathan Collins <nathjcollins@gmail.com>"]
 repository = "https://github.com/nathanjcollins/zed-fsharp"
 
+[settings]
+fsac_custom_path = { type = "string", optional = true, description = "Custom path to fsautocomplete binary" }
+fsac_custom_arguments = { type = "array", items = "string", default = [], description = "Additional arguments for fsautocomplete" }
+
 [language_servers.fsautocomplete]
 name = "fsautocomplete"
 language = "FSharp"
@@ -13,3 +17,8 @@ language = "FSharp"
 [grammars.fsharp]
 repository = "https://github.com/ionide/tree-sitter-fsharp"
 commit = "c4347939b4fb439771dc2561a6923fba6a78251b"
+
+[[capabilities]]
+kind = "process:exec"
+command = "dotnet"
+args = ["*"]
